avancement du parcours

--- a/index.html
+++ b/index.html
@@ -30,7 +30,28 @@
         </div>
     </section>
     <section id="journey" class="journey">
-        <h2>COUCOU</h2>
+        <h2>mon parcours</h2>
+        <p>Après une scolarité dans le primaire et le secondaire  publique, j'ai obtenu unBac SVT spécialité Informatique et Sciences du Numérique, mention B au lycée Marie Curie dans l'Oise (60).</p>
+    <div class="journey__content">
+        <h4>2013-2014</h4>
+        <h5>Première voix, direction le droit ! </h5>
+        <p>De part une situation familiale, j'ai choisi de partir en droit. J'y ai appris pas mal de chose mais le changement entre lycée/faculté, le changement de région, plusieurs matières ne me plaisant pas j'ai finalement décider de repartir vers les sciences que je connaissais ainsi que mon envie de petite fille : devenir professeure. </p>
+    </div>
+    <div class="journey__content">
+        <h4>2014-2019</h4>
+        <h5>Deuxième voix, direction les SVT !</h5>
+        <p> Pour se faire je suis retournée dans ma région natale sur Amiens où j'ai fait dans un premier temps une <span class="text-green">licence de Sciences de la Vie de la Terre et de l'univers (SVTU).</span>
+
+            </p>
+            <p>Puis j'ai eu deux en plus tard mon <span class="text-green">Master 2 des métiers de l'enseignement de l'éducation et de la formation (MEEF) du second degré spécialité SVT</span> durant lequel j'ai également passé mon <span class="text-green">Certificat Informatique et Internet niveau 2</span>.</p>
+    </div>
+    <div class="journey__content">
+        <h4>2022-2023</h4>
+        <h5>Jamais deux sans trois !</h5>
+        <p>Après des stages en tant que professeure de SVT en collège et lycée, ainsi que trois ans dans l'éducation nationale en poste d'Assistant d'Education et professeur particulier, je me suis rendue compte que je ne souhaitais pas continuer de cette manière et l'enseignement de cette façon. En parallèle, je me suis beaucoup intéressée au développement, en plus du graphisme, je commençais à intégrer, à créer des maquettes pour mon entourage, et avec les encouragements de mon ami Anthony j'ai décidé de me lancer et de me professionnaliser.</p>
+    </div>
     </section>
+    <div class="transition">
+        <p>Le début d'une aventure...</p></div>
 </body>
 </html>
