journey structure terminée, sans animation

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <p>Après des stages en tant que professeure de SVT en collège et lycée, ainsi que trois ans dans l'éducation nationale en poste d'Assistant d'Education et professeur particulier, je me suis rendue compte que je ne souhaitais pas continuer de cette manière et l'enseignement de cette façon. En parallèle, je me suis beaucoup intéressée au développement, en plus du graphisme, je commençais à intégrer, à créer des maquettes pour mon entourage, et avec les encouragements de mon ami Anthony j'ai décidé de me lancer et de me professionnaliser.</p>
             </div>
         </div>
-    <!-- <img src="./assets/images/cloud-big.svg" alt="" class="cloud">
-    <img src="./assets/images/cloud-big-reverse.svg" alt="" class="cloud">
-    <img src="./assets/images/cloud-big.svg" alt="" class="cloud"> -->
+    <img src="./assets/images/cloud-big-reverse.svg" alt="" class="cloud-right">
+    <img src="./assets/images/cloud-big.svg" alt="" class="cloud cloud-left">
+    <img src="./assets/images/cloud-big-reverse.svg" alt="" class="cloud-right">
     </section>
     <div class="transition">
         <p>Le début d'une aventure...</p></div>
