Carrousel terminé, sans éléments décor ni hover

--- a/index.html
+++ b/index.html
@@ -53,11 +53,56 @@
                 <p>Après des stages en tant que professeure de SVT en collège et lycée, ainsi que trois ans dans l'éducation nationale en poste d'Assistant d'Education et professeur particulier, je me suis rendue compte que je ne souhaitais pas continuer de cette manière et l'enseignement de cette façon. En parallèle, je me suis beaucoup intéressée au développement, en plus du graphisme, je commençais à intégrer, à créer des maquettes pour mon entourage, et avec les encouragements de mon ami Anthony j'ai décidé de me lancer et de me professionnaliser.</p>
             </div>
         </div>
-    <img src="./assets/images/cloud-big-reverse.svg" alt="" class="cloud-right">
-    <img src="./assets/images/cloud-big.svg" alt="" class="cloud cloud-left">
-    <img src="./assets/images/cloud-big-reverse.svg" alt="" class="cloud-right">
+        <img src="./assets/images/cloud-big-reverse.svg" alt="" class="cloud-right">
+        <img src="./assets/images/cloud-big.svg" alt="" class="cloud cloud-left">
+        <img src="./assets/images/cloud-big-reverse.svg" alt="" class="cloud-right">
+        </section>
+        <div class="transition">
+            <p>Le début d'une aventure...</p></div>
+    <section id="experience" class="experience">
+        <h2>mes experiences</h2>
+        <div class="carrousel__wrapper">
+            <div class="carrousel carrousel-integration" id="caroussel-integration">
+                <button id="btn-integration-precedent" class="carrousel-btn prev-btn green-btn"><svg xmlns="http://www.w3.org/2000/svg" width="71" height="82" viewBox="0 0 71 82">
+                    <path id="Polygone_1" data-name="Polygone 1" d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z" transform="translate(71) rotate(90)" fill="#ffc98b"/>
+                  </svg></button>
+                <div class="show">
+                    <div class="images" id="slider-integration">
+                        <!-- <div class="image">
+                            <img src="./assets/images/caroussel-integration/albedo.png" alt="">
+                        </div>
+                        <div class="image">
+                            <img src="./assets/images/caroussel-integration/digital-reality.png" alt="">
+                        </div>
+                        <div class="image">
+                            <img src="./assets/images/caroussel-integration/esokia.png" alt="">
+                        </div> -->
+                    </div>
+                </div>
+                <button id="btn-integration-suivant" class="carrousel-btn next-btn green-btn"><svg xmlns="http://www.w3.org/2000/svg" width="71" height="82" viewBox="0 0 71 82">
+                    <path id="Polygone_1" data-name="Polygone 1" d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z" transform="translate(71) rotate(90)" fill="#ffc98b"/>
+                  </svg></button>
+            </div>
+            <div class="carrousel carrousel-maquette" id="carrousel-maquette">
+                <button id="btn-maquette-precedent" class="carrousel-btn prev-btn"><svg xmlns="http://www.w3.org/2000/svg" width="71" height="82" viewBox="0 0 71 82">
+                    <path id="Polygone_1" data-name="Polygone 1" d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z" transform="translate(71) rotate(90)" fill="#ffc98b"/>
+                  </svg></button>
+                <div class="show">
+                    <div class="images" id="slider-maquette">
+                        <!-- <div class="image">
+                            <img src="./assets/images/caroussel-maquette/idealzen.png" alt="">
+                        </div>
+                        <div class="image">
+                            <img src="./assets/images/caroussel-maquette/sophrologie.png" alt="">
+                        </div> -->
+                    </div>
+                </div>
+                <button id="btn-maquette-suivant" class="carrousel-btn next-btn"><svg xmlns="http://www.w3.org/2000/svg" width="71" height="82" viewBox="0 0 71 82">
+                    <path id="Polygone_1" data-name="Polygone 1" d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z" transform="translate(71) rotate(90)" fill="#ffc98b"/>
+                  </svg></button>
+            </div>
+        </div>
     </section>
-    <div class="transition">
-        <p>Le début d'une aventure...</p></div>
+    <script src="./script/carrousel.js"></script>
 </body>
 </html>
