--- a/index.html
+++ b/index.html
@@ -1,108 +1,283 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CV en ligne</title>
-    <link rel="stylesheet" href="./assets/style/main.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./assets/style/main.css" />
+  </head>
+  <body>
     <header>
-        <nav class="nav">
-            <a href="#">canovas hélène</a> 
-            <ul>
-                <li><a href="#hero">présentation</a></li>
-                <li><a href="#journey">parcours</a></li>
-                <li><a href="">expériences</a></li>
-                <li><a href="">en résumé</a></li>
-            </ul>
-        </nav>
+      <nav class="nav">
+        <a href="#">canovas hélène</a>
+        <ul>
+          <li><a href="#hero">présentation</a></li>
+          <li><a href="#journey">parcours</a></li>
+          <li><a href="">expériences</a></li>
+          <li><a href="">en résumé</a></li>
+        </ul>
+      </nav>
     </header>
     <section id="hero" class="hero">
-        <div class="hero__content">
-            <div class="hero__content--img-wrapper"><img src="./assets/images/profil.png" alt=""></div>
-            <h1>Bonjour !</h1>
-            <p><span class="text-green">D</span>ans un premier temps voici mon nom : je m'appelle Hélène Canovas. Apprentie développeuse web, je m'intéresse au secteur depuis deux ans en autodidacte. Je suis à la recherche d'une entreprise pour un contrat d'alternance sur un an.  J'ai un attrait pour l'art, notamment l'art digital. J'aime voir des pensées, des concepts prendre vie et j'aimerais parfaire mes compétences pour les réaliser.</p> 
-            <p><span class="text-green">E</span>videmment j'ai d'autres passions : la musique, les jeux d'énigmes et jeux videos en font partie ainsi que les balades en forêt (bien que je ne suis pas une fan des tiques et moustiques).</p>
-            <p><span class="text-green">V</span>raisemblablement je suis une curieuse un peu timide, une touche à tout comme cela peut se ressentir dans mon parcours.</p>
-            <a class="btn">Mon parcours</a>
+      <div class="hero__content">
+        <div class="hero__content--img-wrapper">
+          <img src="./assets/images/profil.png" alt="" />
         </div>
+        <h1>Bonjour !</h1>
+        <p>
+          <span class="text-green">D</span>ans un premier temps voici mon nom :
+          je m'appelle Hélène Canovas. Apprentie développeuse web, je
+          m'intéresse au secteur depuis deux ans en autodidacte. Je suis à la
+          recherche d'une entreprise pour un contrat d'alternance sur un an.
+          J'ai un attrait pour l'art, notamment l'art digital. J'aime voir des
+          pensées, des concepts prendre vie et j'aimerais parfaire mes
+          compétences pour les réaliser.
+        </p>
+        <p>
+          <span class="text-green">E</span>videmment j'ai d'autres passions : la
+          musique, les jeux d'énigmes et jeux videos en font partie ainsi que
+          les balades en forêt (bien que je ne suis pas une fan des tiques et
+          moustiques).
+        </p>
+        <p>
+          <span class="text-green">V</span>raisemblablement je suis une curieuse
+          un peu timide, une touche à tout comme cela peut se ressentir dans mon
+          parcours.
+        </p>
+        <a class="btn">Mon parcours</a>
+      </div>
     </section>
     <section id="journey" class="journey">
-        <div class="custom-container">
-            <div class="journey__intro">
-                <h2>mon parcours</h2>
-                <p>Après une scolarité dans le primaire et le secondaire  publique, j'ai obtenu unBac SVT spécialité Informatique et Sciences du Numérique, mention B au lycée Marie Curie dans l'Oise (60).</p></div>
-            <div class="journey__content">
-                <h4>2013-2014</h4>
-                <h5>Première voix, direction le droit ! </h5>
-                <p>De part une situation familiale, j'ai choisi de partir en droit. J'y ai appris pas mal de chose mais le changement entre lycée/faculté, le changement de région, plusieurs matières ne me plaisant pas j'ai finalement décider de repartir vers les sciences que je connaissais ainsi que mon envie de petite fille : devenir professeure. </p>
-            </div>
-            <div class="journey__content">
-                <h4>2014-2019</h4>
-                <h5>Deuxième voix, direction les SVT !</h5>
-                <p> Pour se faire je suis retournée dans ma région natale sur Amiens où j'ai fait dans un premier temps une <span class="text-green">licence de Sciences de la Vie de la Terre et de l'univers (SVTU).</span>
-
-                </p>
-                <p>Puis j'ai eu deux en plus tard mon <span class="text-green">Master 2 des métiers de l'enseignement de l'éducation et de la formation (MEEF) du second degré spécialité SVT</span> durant lequel j'ai également passé mon <span class="text-green">Certificat Informatique et Internet niveau 2</span>.</p>
-            </div>
-            <div class="journey__content">
-                <h4>2022-2023</h4>
-                <h5>Jamais deux sans trois !</h5>
-                <p>Après des stages en tant que professeure de SVT en collège et lycée, ainsi que trois ans dans l'éducation nationale en poste d'Assistant d'Education et professeur particulier, je me suis rendue compte que je ne souhaitais pas continuer de cette manière et l'enseignement de cette façon. En parallèle, je me suis beaucoup intéressée au développement, en plus du graphisme, je commençais à intégrer, à créer des maquettes pour mon entourage, et avec les encouragements de mon ami Anthony j'ai décidé de me lancer et de me professionnaliser.</p>
-            </div>
+      <div class="custom-container">
+        <div class="journey__intro">
+          <h2>mon parcours</h2>
+          <p>
+            Après une scolarité dans le primaire et le secondaire publique, j'ai
+            obtenu unBac SVT spécialité Informatique et Sciences du Numérique,
+            mention B au lycée Marie Curie dans l'Oise (60).
+          </p>
         </div>
-        <img src="./assets/images/cloud-big-reverse.svg" alt="" class="cloud-right">
-        <img src="./assets/images/cloud-big.svg" alt="" class="cloud cloud-left">
-        <img src="./assets/images/cloud-big-reverse.svg" alt="" class="cloud-right">
-        </section>
-        <div class="transition">
-            <p>Le début d'une aventure...</p></div>
+        <div class="journey__content">
+          <h4>2013-2014</h4>
+          <h5>Première voix, direction le droit !</h5>
+          <p>
+            De part une situation familiale, j'ai choisi de partir en droit. J'y
+            ai appris pas mal de chose mais le changement entre lycée/faculté,
+            le changement de région, plusieurs matières ne me plaisant pas j'ai
+            finalement décider de repartir vers les sciences que je connaissais
+            ainsi que mon envie de petite fille : devenir professeure.
+          </p>
+        </div>
+        <div class="journey__content">
+          <h4>2014-2019</h4>
+          <h5>Deuxième voix, direction les SVT !</h5>
+          <p>
+            Pour se faire je suis retournée dans ma région natale sur Amiens où
+            j'ai fait dans un premier temps une
+            <span class="text-green"
+              >licence de Sciences de la Vie de la Terre et de l'univers
+              (SVTU).</span
+            >
+          </p>
+          <p>
+            Puis j'ai eu deux en plus tard mon
+            <span class="text-green"
+              >Master 2 des métiers de l'enseignement de l'éducation et de la
+              formation (MEEF) du second degré spécialité SVT</span
+            >
+            durant lequel j'ai également passé mon
+            <span class="text-green"
+              >Certificat Informatique et Internet niveau 2</span
+            >.
+          </p>
+        </div>
+        <div class="journey__content">
+          <h4>2022-2023</h4>
+          <h5>Jamais deux sans trois !</h5>
+          <p>
+            Après des stages en tant que professeure de SVT en collège et lycée,
+            ainsi que trois ans dans l'éducation nationale en poste d'Assistant
+            d'Education et professeur particulier, je me suis rendue compte que
+            je ne souhaitais pas continuer de cette manière et l'enseignement de
+            cette façon. En parallèle, je me suis beaucoup intéressée au
+            développement, en plus du graphisme, je commençais à intégrer, à
+            créer des maquettes pour mon entourage, et avec les encouragements
+            de mon ami Anthony j'ai décidé de me lancer et de me
+            professionnaliser.
+          </p>
+        </div>
+      </div>
+      <img
+        src="./assets/images/cloud-big-reverse.svg"
+        alt=""
+        class="cloud-right"
+      />
+      <img
+        src="./assets/images/cloud-big.svg"
+        alt=""
+        class="cloud cloud-left"
+      />
+      <img
+        src="./assets/images/cloud-big-reverse.svg"
+        alt=""
+        class="cloud-right"
+      />
+    </section>
+    <div class="transition">
+      <p>Le début d'une aventure...</p>
+    </div>
     <section id="experience" class="experience">
-        <h2>mes experiences</h2>
-        <div class="carrousel__wrapper">
-            <div class="carrousel carrousel-integration" id="caroussel-integration">
-                <button id="btn-integration-precedent" class="carrousel-btn prev-btn green-btn"><svg xmlns="http://www.w3.org/2000/svg" width="71" height="82" viewBox="0 0 71 82">
-                    <path id="Polygone_1" data-name="Polygone 1" d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z" transform="translate(71) rotate(90)" fill="#ffc98b"/>
-                  </svg></button>
-                <div class="show">
-                    <div class="images" id="slider-integration">
-                        <!-- <div class="image">
-                            <img src="./assets/images/caroussel-integration/albedo.png" alt="">
-                        </div>
-                        <div class="image">
+      <h2>mes experiences</h2>
+      <div class="carrousel__wrapper">
+        <div class="carousel-title">
+          <div
+            class="carrousel carrousel-integration"
+            id="caroussel-integration"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="450.261"
+              height="754"
+              viewBox="0 0 450.261 754"
+            >
+              <path
+                id="Tracé_31"
+                data-name="Tracé 31"
+                d="M1574,186s-157.345-.906-204.191,168.2-245.741,142.449-245.741,355.008S1574.33,940,1574.33,940Z"
+                transform="translate(-1124.068 -186)"
+                fill="#e79796"
+              />
+            </svg>
+            <button
+              id="btn-integration-precedent"
+              class="carrousel-btn prev-btn green-btn"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="71"
+                height="82"
+                viewBox="0 0 71 82"
+              >
+                <path
+                  id="Polygone_1"
+                  data-name="Polygone 1"
+                  d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z"
+                  transform="translate(71) rotate(90)"
+                  fill="#ffc98b"
+                />
+              </svg>
+            </button>
+            <div class="show">
+              <div class="images" id="slider-integration">
+                <!-- <div class="image">
+                  <img
+                    src="./assets/images/caroussel-integration/albedo.png"
+                    alt=""
+                  />
+                  <div class="overlay">
+                    <h6>Site Albedo</h6>
+                    <p>Réalisée à partir d'une maquette photoshop en ligne</p>
+                    <ul>
+                      <li>Langage html/css</li>
+                      <li>Transition css</li>
+                      <li>Carrousel (à partir d'animation css)</li>
+                    </ul>
+                  </div>
+                </div> -->
+                <!-- <div class="image">
                             <img src="./assets/images/caroussel-integration/digital-reality.png" alt="">
                         </div>
                         <div class="image">
                             <img src="./assets/images/caroussel-integration/esokia.png" alt="">
                         </div> -->
-                    </div>
-                </div>
-                <button id="btn-integration-suivant" class="carrousel-btn next-btn green-btn"><svg xmlns="http://www.w3.org/2000/svg" width="71" height="82" viewBox="0 0 71 82">
-                    <path id="Polygone_1" data-name="Polygone 1" d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z" transform="translate(71) rotate(90)" fill="#ffc98b"/>
-                  </svg></button>
+              </div>
             </div>
-            <div class="carrousel carrousel-maquette" id="carrousel-maquette">
-                <button id="btn-maquette-precedent" class="carrousel-btn prev-btn"><svg xmlns="http://www.w3.org/2000/svg" width="71" height="82" viewBox="0 0 71 82">
-                    <path id="Polygone_1" data-name="Polygone 1" d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z" transform="translate(71) rotate(90)" fill="#ffc98b"/>
-                  </svg></button>
-                <div class="show">
-                    <div class="images" id="slider-maquette">
-                        <!-- <div class="image">
+            <button
+              id="btn-integration-suivant"
+              class="carrousel-btn next-btn green-btn"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="71"
+                height="82"
+                viewBox="0 0 71 82"
+              >
+                <path
+                  id="Polygone_1"
+                  data-name="Polygone 1"
+                  d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z"
+                  transform="translate(71) rotate(90)"
+                  fill="#ffc98b"
+                />
+              </svg>
+            </button>
+          </div>
+          <h3>Intégration maquette</h3>
+        </div>
+        <div class="carousel-title">
+          <div class="carrousel carrousel-maquette" id="carrousel-maquette">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="450.261"
+              height="754"
+              viewBox="0 0 450.261 754"
+            >
+              <path
+                id="Tracé_32"
+                data-name="Tracé 32"
+                d="M1124.4,186s157.345-.906,204.19,168.2S1574.33,496.647,1574.33,709.206,1124.068,940,1124.068,940Z"
+                transform="translate(-1124.068 -186)"
+                fill="#c6c09c"
+              />
+            </svg>
+            <button id="btn-maquette-precedent" class="carrousel-btn prev-btn">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="71"
+                height="82"
+                viewBox="0 0 71 82"
+              >
+                <path
+                  id="Polygone_1"
+                  data-name="Polygone 1"
+                  d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z"
+                  transform="translate(71) rotate(90)"
+                  fill="#ffc98b"
+                />
+              </svg>
+            </button>
+            <div class="show">
+              <div class="images" id="slider-maquette">
+                <!-- <div class="image">
                             <img src="./assets/images/caroussel-maquette/idealzen.png" alt="">
                         </div>
                         <div class="image">
                             <img src="./assets/images/caroussel-maquette/sophrologie.png" alt="">
                         </div> -->
-                    </div>
-                </div>
-                <button id="btn-maquette-suivant" class="carrousel-btn next-btn"><svg xmlns="http://www.w3.org/2000/svg" width="71" height="82" viewBox="0 0 71 82">
-                    <path id="Polygone_1" data-name="Polygone 1" d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z" transform="translate(71) rotate(90)" fill="#ffc98b"/>
-                  </svg></button>
+              </div>
             </div>
+            <button id="btn-maquette-suivant" class="carrousel-btn next-btn">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="71"
+                height="82"
+                viewBox="0 0 71 82"
+              >
+                <path
+                  id="Polygone_1"
+                  data-name="Polygone 1"
+                  d="M31.474,16.5a11,11,0,0,1,19.052,0l21.946,38A11,11,0,0,1,62.946,71H19.054A11,11,0,0,1,9.529,54.5Z"
+                  transform="translate(71) rotate(90)"
+                  fill="#ffc98b"
+                />
+              </svg>
+            </button>
+          </div>
+          <h3 class="maquette-title">Maquette originale</h3>
         </div>
+      </div>
     </section>
     <script src="./script/carrousel.js"></script>
-</body>
+  </body>
 </html>
