Stylisation du hover du carrousel

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                   />
                   <div class="overlay">
                     <h6>Site Albedo</h6>
-                    <p>Réalisée à partir d'une maquette photoshop en ligne</p>
+                    <p>Réalisé à partir d'une maquette photoshop en ligne</p>
                     <ul>
                       <li>Langage html/css</li>
                       <li>Transition css</li>
@@ -277,6 +277,10 @@
           <h3 class="maquette-title">Maquette originale</h3>
         </div>
       </div>
+      <p>
+        Je sais qu'elles ne sont pas parfaites, mais j'ai été heureuse de les
+        faire. J'ai hâte d'en apprendre davantage et de me perfectionner...
+      </p>
     </section>
     <script src="./script/carrousel.js"></script>
   </body>
