carrousel terminé / Partie résumée en cours (à faire partie droite + nuages

--- a/index.html
+++ b/index.html
@@ -282,6 +282,38 @@
         faire. J'ai hâte d'en apprendre davantage et de me perfectionner...
       </p>
     </section>
+    <section id="resume" class="resume">
+      <div class="resume__container">
+        <div class="resume-en-resume">
+          <h2>en résumé</h2>
+          <ul class="resume-ul">
+            <li class="resume-list">Reconversion professionnelle</li>
+            <li class="resume-list">
+              Autodidacte dans le développement depuis 2 ans
+            </li>
+            <li class="resume-list">
+              Curiosité, motivation, patience, rigueur, autonomie, fiabilité
+            </li>
+            <li class="resume-list">
+              Compétences :
+              <ul class="ul-description">
+                <li class="li-description full">word</li>
+                <li class="li-description almost">excel</li>
+                <li class="li-description full">suite adobe</li>
+                <li class="li-description almost">html/css</li>
+              </ul>
+            </li>
+            <li class="resume-list">
+              Langues :
+              <ul class="ul-description">
+                <li class="li-description full">Français</li>
+                <li class="li-description quite">Anglais</li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <script src="./script/carrousel.js"></script>
   </body>
 </html>
