--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <ul>
           <li><a href="#hero">présentation</a></li>
           <li><a href="#journey">parcours</a></li>
-          <li><a href="">expériences</a></li>
-          <li><a href="">en résumé</a></li>
+          <li><a href="#experience">expériences</a></li>
+          <li><a href="#resume">en résumé</a></li>
         </ul>
       </nav>
     </header>
@@ -155,9 +155,9 @@
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="71"
+                width="60"
                 height="82"
-                viewBox="0 0 71 82"
+                viewBox="0 0 60 82"
               >
                 <path
                   id="Polygone_1"
@@ -199,9 +199,9 @@
             >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="71"
+                width="60"
                 height="82"
-                viewBox="0 0 71 82"
+                viewBox="0 0 60 82"
               >
                 <path
                   id="Polygone_1"
@@ -234,9 +234,9 @@
             <button id="btn-maquette-precedent" class="carrousel-btn prev-btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="71"
+                width="60"
                 height="82"
-                viewBox="0 0 71 82"
+                viewBox="0 0 60 82"
               >
                 <path
                   id="Polygone_1"
@@ -260,9 +260,9 @@
             <button id="btn-maquette-suivant" class="carrousel-btn next-btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="71"
+                width="60"
                 height="82"
-                viewBox="0 0 71 82"
+                viewBox="0 0 60 82"
               >
                 <path
                   id="Polygone_1"
@@ -309,6 +309,24 @@
                 <li class="li-description full">Français</li>
                 <li class="li-description quite">Anglais</li>
               </ul>
+            </li>
+          </ul>
+        </div>
+        <div class="resume-contact">
+          <h2>Me contacter</h2>
+          <ul>
+            <li>07 86 04 17 21</li>
+            <li>11 Rue Christian Marvillet 21160 Perrigny-lès-Dijon</li>
+            <li>canovas.helene@gmail.com</li>
+            <li>
+              <a href="https://github.com/HeleneC-cyber">
+                GitHub.com/HeleneC-cyber</a
+              >
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/helene-canovas-48710b141/"
+                >in/helene-canovas-48710b141/</a
+              >
             </li>
           </ul>
         </div>
