--- a/index.html
+++ b/index.html
@@ -315,16 +315,24 @@
         <div class="resume-contact">
           <h2>Me contacter</h2>
           <ul>
-            <li>07 86 04 17 21</li>
-            <li>11 Rue Christian Marvillet 21160 Perrigny-lès-Dijon</li>
-            <li>canovas.helene@gmail.com</li>
-            <li>
-              <a href="https://github.com/HeleneC-cyber">
+            <li class="li-contact">07 86 04 17 21</li>
+            <li class="li-contact">
+              11 Rue Christian Marvillet 21160 Perrigny-lès-Dijon
+            </li>
+            <li class="li-contact">
+              <a href="mailto:canovas.helene@gmail.com">
+                canovas.helene@gmail.com</a
+              >
+            </li>
+            <li class="li-contact">
+              <a href="https://github.com/HeleneC-cyber" target="_blank">
                 GitHub.com/HeleneC-cyber</a
               >
             </li>
-            <li>
-              <a href="https://www.linkedin.com/in/helene-canovas-48710b141/"
+            <li class="li-contact">
+              <a
+                href="https://www.linkedin.com/in/helene-canovas-48710b141/"
+                target="_blank"
                 >in/helene-canovas-48710b141/</a
               >
             </li>
@@ -332,6 +340,10 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p>Maquette et intégration par Hélène Canovas</p>
+      <p>Maquette sous XD et Intégration sur Visual Studio Code</p>
+    </footer>
     <script src="./script/carrousel.js"></script>
   </body>
 </html>
