desktop terminé et avancement du responsive

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/style/main.css" />
   </head>
   <body>
-    <header>
+    <header id="header">
       <nav class="nav">
         <a href="#">canovas hélène</a>
         <ul>
@@ -19,6 +19,78 @@
         </ul>
       </nav>
     </header>
+    <div class="sidebar">
+      <ul>
+        <li>
+          <a href="#header"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="62.001"
+              height="61.998"
+              viewBox="0 0 62.001 61.998"
+            >
+              <path
+                id="Exclusion_1"
+                data-name="Exclusion 1"
+                d="M-10845-2452a30.8,30.8,0,0,1-12.065-2.436,30.907,30.907,0,0,1-9.854-6.643,30.89,30.89,0,0,1-6.643-9.854A30.789,30.789,0,0,1-10876-2483a30.789,30.789,0,0,1,2.437-12.067,30.892,30.892,0,0,1,6.643-9.853,30.9,30.9,0,0,1,9.854-6.643A30.8,30.8,0,0,1-10845-2514a30.818,30.818,0,0,1,12.067,2.436,30.9,30.9,0,0,1,9.854,6.643,30.91,30.91,0,0,1,6.644,9.853A30.789,30.789,0,0,1-10814-2483a30.787,30.787,0,0,1-2.437,12.067,30.908,30.908,0,0,1-6.644,9.854,30.9,30.9,0,0,1-9.854,6.643A30.818,30.818,0,0,1-10845-2452Zm12.689-10.511h0c.09.008.179.008.265.008h1.28a3.207,3.207,0,0,0,3.2-3.2v-1.288a6.252,6.252,0,0,0,.041-.649l-.057-12.826h2.563a2.6,2.6,0,0,0,2.561-2.571,2.189,2.189,0,0,0-.879-1.922l-20.449-17.974a2.654,2.654,0,0,0-1.682-.562,2.315,2.315,0,0,0-1.764.641l-20.528,17.895a2.6,2.6,0,0,0-.8,1.922,2.539,2.539,0,0,0,2.561,2.571h2.571v5.571a1.936,1.936,0,0,0-.009.224v8.969a3.206,3.206,0,0,0,3.2,3.2h1.282c.09,0,.179-.007.278-.016h.02c.125.009.237.016.35.016h4.477a3.207,3.207,0,0,0,3.2-3.2v-7.045a2.565,2.565,0,0,1,2.561-2.563h5.126a2.565,2.565,0,0,1,2.561,2.563v7.045a3.207,3.207,0,0,0,3.2,3.2h4.522C-10832.537-2462.5-10832.424-2462.5-10832.312-2462.512Z"
+                transform="translate(10876 2513.999)"
+                fill="#f7dad5"
+              /></svg
+          ></a>
+        </li>
+        <li>
+          <a href="#journey"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="62.001"
+              height="61.998"
+              viewBox="0 0 62.001 61.998"
+            >
+              <path
+                id="Exclusion_2"
+                data-name="Exclusion 2"
+                d="M-10845-2452a30.8,30.8,0,0,1-12.065-2.436,30.908,30.908,0,0,1-9.854-6.643,30.886,30.886,0,0,1-6.643-9.853A30.789,30.789,0,0,1-10876-2483a30.789,30.789,0,0,1,2.437-12.067,30.892,30.892,0,0,1,6.643-9.853,30.907,30.907,0,0,1,9.854-6.643A30.8,30.8,0,0,1-10845-2514a30.818,30.818,0,0,1,12.067,2.436,30.9,30.9,0,0,1,9.854,6.643,30.91,30.91,0,0,1,6.644,9.853A30.789,30.789,0,0,1-10814-2483a30.787,30.787,0,0,1-2.437,12.067,30.9,30.9,0,0,1-6.644,9.853,30.885,30.885,0,0,1-9.854,6.643A30.818,30.818,0,0,1-10845-2452Zm-2.372-13.468h0l-1.105,1.91a4.42,4.42,0,0,0,1.616,6.027,4.4,4.4,0,0,0,2.2.591,4.431,4.431,0,0,0,3.828-2.207l1.105-1.911-7.643-4.411Zm13.859-24.394c-3.6,0-7.316,4.232-9.407,7.857a13.032,13.032,0,0,0-1.676,7.3v.013a13.052,13.052,0,0,1-1.674,7.315l7.643,4.411c.05-.044,5.247-4.675,7.425-8.45a23.9,23.9,0,0,0,3.073-10.009c.227-3.771-.837-6.533-2.994-7.777A4.732,4.732,0,0,0-10833.515-2489.863Zm-28.555,5.719h0l-1.1,1.91a4.383,4.383,0,0,0-.44,3.347,4.385,4.385,0,0,0,2.056,2.68,4.4,4.4,0,0,0,2.2.591,4.431,4.431,0,0,0,3.827-2.2l1.1-1.911-7.643-4.414Zm17.4-22.223h0c-2.655,0-5.278,1.659-7.01,3.05a24.56,24.56,0,0,0-5.684,6.606c-2.165,3.747-3.592,10.589-3.605,10.656l7.643,4.414a13.034,13.034,0,0,1,5.5-5.107l.013-.008a13.056,13.056,0,0,0,5.482-5.1,23.194,23.194,0,0,0,2.688-7.138c.526-3.228-.265-5.476-2.353-6.681a5.269,5.269,0,0,0-2.67-.692Z"
+                transform="translate(10876.001 2513.999)"
+                fill="#f7dad5"
+              /></svg
+          ></a>
+        </li>
+        <li>
+          <a href="#experience"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="62.001"
+              height="61.998"
+              viewBox="0 0 62.001 61.998"
+            >
+              <path
+                id="Exclusion_3"
+                data-name="Exclusion 3"
+                d="M-10845-2452a30.8,30.8,0,0,1-12.065-2.436,30.907,30.907,0,0,1-9.854-6.643,30.89,30.89,0,0,1-6.643-9.854A30.789,30.789,0,0,1-10876-2483a30.789,30.789,0,0,1,2.437-12.067,30.892,30.892,0,0,1,6.643-9.853,30.9,30.9,0,0,1,9.854-6.643A30.8,30.8,0,0,1-10845-2514a30.818,30.818,0,0,1,12.067,2.436,30.9,30.9,0,0,1,9.854,6.643,30.91,30.91,0,0,1,6.644,9.853A30.789,30.789,0,0,1-10814-2483a30.787,30.787,0,0,1-2.437,12.067,30.908,30.908,0,0,1-6.644,9.854,30.9,30.9,0,0,1-9.854,6.643A30.818,30.818,0,0,1-10845-2452Zm-15.018-43.012h-10.585l7.02,11.988-7.129,12.023h10.514l1.908-4.894a9.716,9.716,0,0,0,.467-2.125h.216a9.991,9.991,0,0,0,.5,2.126l1.872,4.894h10.656l-6.984-12.023,6.911-11.988h-10.4l-1.8,5.041a5.6,5.6,0,0,0-.432,1.763h-.251a5.869,5.869,0,0,0-.4-1.979Zm17.531-.071V-2471h9.108v-6.515h5.363a11.229,11.229,0,0,0,5.219-1.3c2.253-1.358,3.494-4.235,3.494-8.1,0-3.154-.907-5.368-2.773-6.769a8.532,8.532,0,0,0-4.825-1.4Zm11.017,11.843h-1.908v-5.112h2.34c1.839,0,2.555.677,2.555,2.413C-10828.484-2484.073-10829.405-2483.24-10831.471-2483.24Z"
+                transform="translate(10876 2513.999)"
+                fill="#f7dad5"
+              /></svg
+          ></a>
+        </li>
+        <li>
+          <a href="#resume"
+            ><svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="62.001"
+              height="61.998"
+              viewBox="0 0 62.001 61.998"
+            >
+              <path
+                id="Exclusion_4"
+                data-name="Exclusion 4"
+                d="M-10845-2452a30.8,30.8,0,0,1-12.065-2.436,30.907,30.907,0,0,1-9.854-6.643,30.89,30.89,0,0,1-6.643-9.854A30.789,30.789,0,0,1-10876-2483a30.789,30.789,0,0,1,2.437-12.067,30.892,30.892,0,0,1,6.643-9.853,30.9,30.9,0,0,1,9.854-6.643A30.8,30.8,0,0,1-10845-2514a30.818,30.818,0,0,1,12.067,2.436,30.9,30.9,0,0,1,9.854,6.643,30.91,30.91,0,0,1,6.644,9.853A30.789,30.789,0,0,1-10814-2483a30.787,30.787,0,0,1-2.437,12.067,30.908,30.908,0,0,1-6.644,9.854,30.9,30.9,0,0,1-9.854,6.643A30.818,30.818,0,0,1-10845-2452Zm-11.09-52.186a5.3,5.3,0,0,0-5.3,5.3v31.78a5.3,5.3,0,0,0,5.3,5.3h21.184a5.3,5.3,0,0,0,5.3-5.3v-23.834h-10.593a2.653,2.653,0,0,1-2.648-2.65v-10.593Zm15.889,0h0v10.593h10.593l-10.593-10.593Z"
+                transform="translate(10876 2513.999)"
+                fill="#f7dad5"
+              /></svg
+          ></a>
+        </li>
+      </ul>
+    </div>
     <section id="hero" class="hero">
       <div class="hero__content">
         <div class="hero__content--img-wrapper">
@@ -45,7 +117,7 @@
           un peu timide, une touche à tout comme cela peut se ressentir dans mon
           parcours.
         </p>
-        <a class="btn">Mon parcours</a>
+        <a class="btn" href="#journey">Mon parcours</a>
       </div>
     </section>
     <section id="journey" class="journey">
